--- a/templates/headpong.html
+++ b/templates/headpong.html
@@ -12,8 +12,8 @@
 </head>
 <body class="container">
 <div>
-  <h1>Welcome to FaceFeed</h1>
-  <h2>Our AI-enabled emotion detector will show you content that reflects your mood!</h2>
+  <h1>Headpong</h1>
+  <h2>Use your head + AI to beat the high-score</h2>
 </div>
 <div>
   <canvas id="gameCanvas" width="800" height="600"><canvas/>
