--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,8 @@
 <div class="alert alert-info"><p span="warning">No data will be collected by this application
     </p></div>
 <div>
-    <a href="/newsfeed"><button type="button" class="btn btn-primary btn-lg">Newsfeed</button></a>
-    <a href="/pong"><button type="button" class="btn btn-primary btn-lg">HeadPong</button></a>
+    <!--<a href="/newsfeed"><button type="button" class="btn btn-primary btn-lg">Newsfeed</button></a>-->
+    <a href="/pong"><button type="button" class="btn btn-primary btn-lg">Play HeadPong</button></a>
     <!--<a href="/social"><button type="button" class="btn btn-primary btn-lg">XXX</button></a>-->
     
 </div>
