--- a/templates/facefeed.html
+++ b/templates/facefeed.html
@@ -1,27 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
- <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="Data Dashboard">
-   <meta name="author" content="Aboze Brain">
-   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-   <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
-   <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
-<title>Entertain Me</title>
-</head>
-<body class="container">
+{% extends 'userbase.html' %}
+{% block title %}Welcome to your newsfeed{% endblock %}
+{% block content %}
 <div>
-  <h1>Welcome to FaceFeed</h1>
-  <h2>Our AI-enabled emotion detector will show you content that reflects your mood!</h2>
+  <h1>Welcome to your ThreeFeed</h1>
+  <h2>Rate the articles to see more content</h2>
+  <div class="row">
+  {% for item in data %}
+    <div class="col-sm">
+      <div class="card" style="width: 18rem;">
+        <img class="card-img-top" 
+        style="height: 18rem;"
+        alt="Ai-generated image" src="{{url_for('static', filename='data/images/pngegg.png')}}">
+        <!--src="{# url_for('static', filename='data/images/' + item.imgfilepath) #}"--> 
+        <div class="card-body">
+          <h5 class="card-title">{{ item.headline }}</h5>
+          <p class="card-text">{{ item.short_description }}</p>
+          <div class="btn-group" role="group" aria-label="...">
+            <button type="button" class="btn btn-primary" onclick="getonestory()">&#43;</button>
+            <button type="button" class="btn btn-danger" onclick="getonestory()">-</button>
+          </div>
+          <!--<a href="#" class="btn btn-primary">Read more</a>-->
+        </div>
+      </div>
+    </div>
+  {% endfor %}
+  </div>
 </div>
+{% endblock %}
+{% block scripts %}
+<script>
 
-{% include 'banner.html' %}
-
-
-
-
-<script src="{{ url_for('static', filename='js/jquery1.11.1.min.js') }}"></script>
-
-</body>
-</html>
+function getonestory() {
+  $(function() {
+          $('a#test').on('click', function(e) {
+            e.preventDefault()
+            $.getJSON('/getonestory',
+                function(data) {
+              //do nothing
+              console.log(data);
+            });
+            return false;
+          });
+        });
+}
+</script>
+{% endblock %}
