--- a/templates/headpong.html
+++ b/templates/headpong.html
@@ -1,16 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
- <head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-   <meta name="description" content="Data Dashboard">
-   <meta name="author" content="Aboze Brain">
-   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-   <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
-   <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
-<title>Entertain Me</title>
-</head>
-<body class="container">
+{% extends 'userbase.html' %}
+{% block title %}HeadPong{% endblock %}
+{% block content %}
 <div>
   <h1>Headpong</h1>
   <h2>Use your head + AI to beat the high-score</h2>
@@ -23,13 +13,39 @@
 </div>
 
 
+<!-- Modal -->
+<div class="modal fade" id="highScoreModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">HIGH SCORE</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <h1>HIGH SCORE!</h1>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
 
-<script src="{{ url_for('static', filename='js/jquery1.11.1.min.js') }}"></script>
+
+{% block scripts %}
+<script type="text/javascript">
+  var updateHighScoreUrl = '{{ url_for("updateHighScore") }}'
+  var highScore = {{ data|tojson|safe }}.highScore;
+</script>
 <script src="{{ url_for('static', filename='js/pong.js') }}"></script>
 <script type="text/javascript">
   var headPosUrl = '{{ url_for("move_paddle") }}';
-  console.log(headPosUrl, "url");
+  // console.log(headPosUrl, "url");
   setInterval(movePaddle, 25, headPosUrl)
 </script>
-</body>c
+{% endblock %}
+
+
+
+</body>
 </html>
