--- a/templates/report-external.html
+++ b/templates/report-external.html
@@ -28,4 +28,19 @@
           </div>
         </div>
     </div>
+
+    <div class="col-sm">
+      <div class="card" style="width: 12rem;">
+        <img class="card-img-top" src="{{url_for('static', filename='data/AIDD_logo.png')}}" style="height: 12rem;"
+        alt="Ai Incident Database logo">
+        <div class="card-body">
+          <h5 class="card-title">AI Incident Database</h5>
+          <a href="https://incidentdatabase.ai/" class="btn btn-primary">Find out more</a>
+          <a href="https://incidentdatabase.ai/" class="btn btn-secondary">Report</a>
+        </div>
+      </div>
+  </div>
+
+
+    
 {% endblock %}
