--- a/templates/headpong.html
+++ b/templates/headpong.html
@@ -6,11 +6,12 @@
   <h2>Use your head + AI to beat the high-score</h2>
 </div>
 <div>
-  <canvas id="gameCanvas" width="800" height="600"><canvas/>
+  <canvas id="gameCanvas" width="800" height="600"></canvas>
 </div>
 <div>
-  <img src="{{ url_for('video_feed') }}" />
+  <img src="{{ url_for('video_feed') }}" width="800"/>
 </div>
+
 
 
 <!-- Modal -->
