--- a/templates/my-data.html
+++ b/templates/my-data.html
@@ -1,7 +1,5 @@
 {% extends 'data.html' %}
-{% block title %}My Data{% endblock %}
-{% block content %}
-{% block pageh1 %}My Data{% endblock %}
+{% block pageh1 %}Standard User Data Report{% endblock %}
 {% block buttonname %}
-<a href="{{url_for('static', filename='data/tmp/mydata.json')}}" download></a>
-Download{% endblock %}
+Download
+{% endblock %}
