--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -10,4 +10,24 @@
     opacity: 0.75;
     cursor: pointer;
   }
+
+img.report-external-image {
+  width: auto;
+  height: 10em;
+  margin: auto;
+}
   
+
+nav.navbar-dark {
+  background-color: coral!important;
+}
+
+button.btn-primary {
+  background-color: coral;
+  border-color: coral;
+}
+
+button.btn-primary:hover {
+  background-color: orange;
+  border-color: lightcoral;
+}
