--- a/templates/base.html
+++ b/templates/base.html
@@ -8,13 +8,14 @@
         <meta name="description" content="Data Dashboard">
         <meta name="author" content="Aboze Brain">
         <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-        <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
         <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static', filename='styles/styles.css') }}">
+        {% block extraheaders %}{% endblock %}
         <title>{% block title %}{% endblock %}</title>
     {% endblock %}
     
 </head>
-<body class="container">
+<body class="container" style="margin-top: 2em;">
     
     <div id="content">{% block content %}{% endblock %}</div>
     
@@ -25,6 +26,7 @@
     <script src="{{ url_for('static', filename='js/report.js') }}"></script>
 
     {% block scripts %}{% endblock %}
+
 
 </body>
 </html>
