--- a/templates/data.html
+++ b/templates/data.html
@@ -1,35 +1,42 @@
 {% extends 'base.html' %}
-{% block title %}My Data{% endblock %}
 {% block content %}
 <div>
   <h1>{% block pageh1 %}{% endblock %}</h1>
 </div>
 <form>
     <!--Optional personal data-->
-    {% for key, value in data.items() %}
+    <!-- {# for key, value in data.items() #}
       <div class="form-group row">
-        <label for="static{{key}}" class="col-sm-2 col-form-label">{{ key }}</label>
+        <label for="static{#key#}" class="col-sm-2 col-form-label">{# key #}</label>
         <div class="col-sm-10">
-          <input type="text" readonly class="form-control-plaintext" id="static{{key}}" value="{{ value }}">
+          <input type="text" readonly class="form-control-plaintext" id="static{#key#}" value="{# value #}">
         </div>
       </div>
-    {% endfor %}
+    {# endfor #} -->
+
+
+    <div class="form-group row">
+      <label for="tstamp" class="col-sm-2 col-form-label">Timestamp</label>
+      <div class="col-sm-10">
+        <input readonly class="form-control-plaintext" id="tstamp", value="{{ time }}">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="serive" class="col-sm-2 col-form-label">Service</label>
+      <div class="col-sm-10">
+        <input readonly class="form-control-plaintext" id="serive", value="HeadPong v.0.1.2 - www.headpong.com">
+      </div>
+    </div>
+
+    <div class="form-group row">
+      <label for="comp" class="col-sm-2 col-form-label">Provider</label>
+      <div class="col-sm-10">
+        <input readonly class="form-control-plaintext" id="comp", value="AI Games Inc.">
+      </div>
+    </div>
 
     <!-- <div class="form-group row">
-      <label for="inputExpected" class="col-sm-2 col-form-label">Timestamp</label>
-      <div class="col-sm-10">
-        <input readonly class="form-control-plaintext" id="inputExpected", value="2024-03-14T02:47:04+0000">
-      </div>
-    </div>
-
-    <div class="form-group row">
-      <label for="inputExpected" class="col-sm-2 col-form-label">Service</label>
-      <div class="col-sm-10">
-        <input readonly class="form-control-plaintext" id="inputExpected", value="Newsfeed v.1.2.0 - www.newsfeed.com">
-      </div>
-    </div>
-
-    <div class="form-group row">
       <label for="inputExpected" class="col-sm-2 col-form-label">Screenshot</label>
       <div class="col-sm-10">
         <img style="height: 100px" src="{{url_for('static', filename='data/images/Screenshot from 2024-03-14 13-40-58.png')}}">
@@ -46,21 +53,36 @@
     </div>
 
     <div class="form-group row">
-      <label for="inputExpected" class="col-sm-2 col-form-label">What was expected? [optional]</label>
+      <label for="inputExpected" class="col-sm-2 col-form-label">What was expected?</label>
       <div class="col-sm-10">
-        <input class="form-control" id="inputExpected">
+        <input class="form-control" id="inputExpected" placeholder="optional">
       </div>
   </div>
-    
+    <br>
     <div class="form-group row">
-      <label for="inputEmail" class="col-sm-2 col-form-label">email [optional]</label>
+      <label for="inputEmail" class="col-sm-2 col-form-label">email</label>
       <div class="col-sm-10">
-        <input class="form-control" id="inputEmail" placeholder="email">
+        <input class="form-control" id="inputEmail" placeholder="optional">
       </div>
     </div>
+    <br>
     {% block extraformdata %}
     {% endblock %}
+    <br>
     <button type="submit" class="btn btn-primary">{% block buttonname %}{% endblock %}</button>
 </form>
-{% endblock %}
 
+<div>
+  <div style="height: 50px"></div>
+, <a href="/">
+  <button type="button" class="btn btn-secondary btn-lg">Restart</button>
+  </a>
+  <div style="height: 50px"></div>
+</div>
+
+{% endblock %}
+{% block scripts %}
+<script>
+  document.getElementById("tstamp").value =  Date.now()
+</script>
+{% endblock %}
