--- a/templates/index.html
+++ b/templates/index.html
@@ -2,13 +2,15 @@
 {% block title %}Welcome{% endblock %}
 {% block content %}
 <h1></h1>
-<h1>Choose your own adventure...</h1>
-<div class="alert alert-info"><p span="warning">No data will be collected by this application
-    </p></div>
-<div>
+<h1 style="font-size: 160px;">ContestAI</h1>
+
+<div style="font-size: 160px;">
     <!--<a href="/newsfeed"><button type="button" class="btn btn-primary btn-lg">Newsfeed</button></a>-->
-    <a href="/pong"><button type="button" class="btn btn-primary btn-lg">Play HeadPong</button></a>
+    <a href="/pong" style="margin: auto;"><button style="font-size: 60px;" type="button" class="btn btn-primary btn-lg">Play HeadPong</button></a>
     <!--<a href="/social"><button type="button" class="btn btn-primary btn-lg">XXX</button></a>-->
     
+</div>
+<div class="alert alert-info">
+    <p span="warning">This exhibit does not collect any personal data including images</p>
 </div>
 {% endblock %}
