--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,7 @@
 {% block title %}Welcome{% endblock %}
 {% block content %}
 <h1></h1>
+<img style="height: 160px" src="{{url_for('static', filename='data/BSI-logo-charcoal.png')}}">
 <h1 style="font-size: 160px;">ContestAI</h1>
 
 <div style="font-size: 160px;">
