--- a/templates/headpong.html
+++ b/templates/headpong.html
@@ -35,6 +35,7 @@
 , <a href="/">
   <button type="button" class="btn btn-secondary btn-lg">Restart</button>
   </a>
+  <button type="button" class="btn btn-secondary btn-lg" onclick="resetHighScore()">Reset high score</button>
   <div style="height: 300px"></div>
 </div>
 
